--- a/poll-styles-corrected.css
+++ b/poll-styles-corrected.css
@@ -12,7 +12,7 @@ Please keep the link to https://poll.ma.pe visible for a short period of time.
 * "Custom" refers to the theme assigned to the poll element
 */
 .Custom {
-    background: #000;
+    background: #CDCDCD;
     width: 400px;
     transition: opacity 1s;
     padding: 10px;
