--- a/poll-styles-corrected.css
+++ b/poll-styles-corrected.css
@@ -1,7 +1,7 @@
 /*
-Use your Custom theme:
+Use your custom theme:
 Select "Custom" theme in the dashboard
-On your https://poll.ma.pe/overlay/<id>/ URL add ?CustomCss=https://example.com/style.css
+On your https://poll.ma.pe/overlay/<id>/ URL add ?customCss=https://example.com/style.css
 
 Please keep the link to https://poll.ma.pe visible for a short period of time.
 */
@@ -9,10 +9,10 @@ Please keep the link to https://poll.ma.pe visible for a short period of time.
 @import url(https://fonts.googleapis.com/css?family=Abel);
 
 /*
-* "Custom" refers to the theme assigned to the poll element
+* "custom" refers to the theme assigned to the poll element
 */
-.Custom {
-    background: #CDCDCD;
+.custom {
+    background: #000;
     width: 400px;
     transition: opacity 1s;
     padding: 10px;
@@ -21,19 +21,19 @@ Please keep the link to https://poll.ma.pe visible for a short period of time.
     opacity: 0;
 }
 
-.Custom.finished,
-.Custom.active {
+.custom.finished,
+.custom.active {
     opacity: 1;
 }
 
-.Custom .metaInfo {
+.custom .metaInfo {
     background: green;
     overflow: hidden;
     padding: 0 10px;
 }
 
-.Custom .total,
-.Custom .duration {
+.custom .total,
+.custom .duration {
     background: #444;
     float: left;
     width: 49%;
@@ -43,44 +43,44 @@ Please keep the link to https://poll.ma.pe visible for a short period of time.
     line-height: 1.3;
 }
 
-.Custom .total strong,
-.Custom .duration strong {
+.custom .total strong,
+.custom .duration strong {
     color: #ffa;
     font-size: 20px;
     display: block;
 }
 
-.Custom .total {
+.custom .total {
     margin-right: 2%;
 }
 
-.Custom.finished .options li,
-.Custom.removing .options li {
+.custom.finished .options li,
+.custom.removing .options li {
     opacity: 0.3;
     transition: all 1s;
 }
 
-.Custom.finished .options li.highest,
-.Custom.removing .options li.highest {
+.custom.finished .options li.highest,
+.custom.removing .options li.highest {
     color: #ffa;
     opacity: 1;
 }
 
-.Custom.finished .options li.help,
-.Custom.removing .options li.help {
+.custom.finished .options li.help,
+.custom.removing .options li.help {
     height: 0;
 }
 
-.Custom.finished .metaInfo,
-.Custom.removing .metaInfo {
+.custom.finished .metaInfo,
+.custom.removing .metaInfo {
     opacity: 0.3;
 }
 
-.Custom.active .options li.help {
+.custom.active .options li.help {
     height: 35px;
 }
 
-.Custom .options li {
+.custom .options li {
     position: relative;
     border: 1px;
     padding: 10px;
@@ -92,7 +92,7 @@ Please keep the link to https://poll.ma.pe visible for a short period of time.
     font-size: 15px;
 }
 
-.Custom .options li.question {
+.custom .options li.question {
     padding: 10px 20px;
     white-space: normal;
     background: blue;
@@ -102,25 +102,25 @@ Please keep the link to https://poll.ma.pe visible for a short period of time.
     position: relative;
 }
 
-.Custom .options li.help {
+.custom .options li.help {
     background: brown;
     text-align: center;
     overflow: hidden;
     height: 0;
 }
 
-.Custom .options li.help span {
+.custom .options li.help span {
     display: block;
     padding: 10px;
 }
 
-.Custom .options li .procent {
+.custom .options li .procent {
     position: absolute;
     top: 10px;
     right: 15px;
 }
 
-.Custom .options li .number {
+.custom .options li .number {
     padding: 5px 10px;
     background: #333;
     position: absolute;
@@ -128,13 +128,13 @@ Please keep the link to https://poll.ma.pe visible for a short period of time.
     left: 10px;
 }
 
-.Custom .options li .bar {
+.custom .options li .bar {
     background: #444;
     height: 5px;
     margin-top: 5px;
 }
 
-.Custom .options li .bar .bar-inner {
+.custom .options li .bar .bar-inner {
     background: #fff;
     height: 100%;
     width: 0;
@@ -142,24 +142,24 @@ Please keep the link to https://poll.ma.pe visible for a short period of time.
     position: relative;
 }
 
-.Custom .options li .text {
+.custom .options li .text {
     line-height: 1.3;
 }
 
 /*
 * Optional outer border
 */
-.Custom .border {
+.custom .border {
     border: 5px solid red;
 }
 
 
-.Custom .credits {
+.custom .credits {
     opacity: 0;
     height: 0;
 }
 
-.Custom .credits {
+.custom .credits {
     text-align: center;
     opacity: 1;
     transition: all 1s;
@@ -168,8 +168,8 @@ Please keep the link to https://poll.ma.pe visible for a short period of time.
     overflow: hidden;
 }
 
-.Custom.active .credits,
-.Custom.removing .credits {
+.custom.active .credits,
+.custom.removing .credits {
     height: 0;
     opacity: 0;
 }
@@ -178,52 +178,52 @@ Please keep the link to https://poll.ma.pe visible for a short period of time.
 /*
 * Positioning
 */
-.Custom.topLeft {
+.custom.topLeft {
     top: 20px;
     left: 20px;
 }
 
-.Custom.topCenter {
+.custom.topCenter {
     top: 20px;
     left: 50%;
     transform: translate(-50%, 0);
 }
 
-.Custom.topRight {
+.custom.topRight {
     top: 20px;
     right: 20px;
 }
 
-.Custom.middleLeft {
+.custom.middleLeft {
     top: 50%;
     transform: translate(0, -50%);
     left: 20px;
 }
 
-.Custom.middleCenter {
+.custom.middleCenter {
     top: 50%;
     transform: translate(-50%, -50%);
     left: 50%;
 }
 
-.Custom.middleRight {
+.custom.middleRight {
     top: 50%;
     transform: translate(0, -50%);
     right: 20px;
 }
 
-.Custom.bottomLeft {
+.custom.bottomLeft {
     bottom: 20px;
     left: 20px;
 }
 
-.Custom.bottomCenter {
+.custom.bottomCenter {
     bottom: 20px;
     left: 50%;
     transform: translate(-50%, 0);
 }
 
-.Custom.bottomRight {
+.custom.bottomRight {
     bottom: 20px;
     right: 20px;
 }
