--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ Please keep the link to https://poll.ma.pe visible for a short period of time.
     padding: 10px;
 
     font-family: Abel;
+
+    // Hide when not active
     opacity: 0;
 }
 
